[gd_scene load_steps=51 format=3 uid="uid://ddos4fllxhx5u"]

[ext_resource type="Script" uid="uid://c7n5j1fp0m4uw" path="res://testscenes/player.gd" id="1_0e48y"]
[ext_resource type="Texture2D" uid="uid://dp42xsjgcja4d" path="res://Assets/Game Assets/Kobold/newkobold/Idle_animation/Textures/idle_kobold_0-0.png" id="3_e3isr"]
[ext_resource type="Texture2D" uid="uid://casiwqhyj8h1k" path="res://Assets/Game Assets/Kobold/newkobold/Idle_animation/Normal Textures/idle_kobold_0-0.png" id="7_e3isr"]
[ext_resource type="Texture2D" uid="uid://cbg8faetxhqx3" path="res://Assets/Game Assets/Kobold/newkobold/Walking_animations/90_walk.png" id="7_eftn4"]
[ext_resource type="Texture2D" uid="uid://be1vl3hod4vbu" path="res://Assets/Game Assets/Kobold/newkobold/Walking_animations/270_walk.png" id="8_vjg0x"]
[ext_resource type="Texture2D" uid="uid://unm0xtdx4l8x" path="res://Assets/Game Assets/Kobold/newkobold/Walking_animations/0_walk.png" id="9_e7qq7"]
[ext_resource type="Texture2D" uid="uid://b00i78gpegd2s" path="res://Assets/Game Assets/Kobold/newkobold/Walking_animations/180_walk.png" id="10_12egq"]
[ext_resource type="Texture2D" uid="uid://dyj6id70r6cpk" path="res://Assets/Game Assets/Kobold/newkobold/Walking_animations/45_walk.png" id="11_e3isr"]
[ext_resource type="Texture2D" uid="uid://1xjtru2intj8" path="res://Assets/Game Assets/Kobold/newkobold/Walking_animations/135_walk.png" id="12_dip6k"]
[ext_resource type="Texture2D" uid="uid://bvlpi0idrp7e8" path="res://Assets/Game Assets/Kobold/newkobold/Walking_animations/225_walk.png" id="13_70qsr"]
[ext_resource type="Texture2D" uid="uid://psw1l6vr33um" path="res://Assets/Game Assets/Kobold/newkobold/Walking_animations/315_walk.png" id="14_nbrll"]

[sub_resource type="Animation" id="Animation_gs10s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_e7qq7")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_70qsr"]
resource_name = "idle_back"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 31]
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dip6k"]

[sub_resource type="CanvasTexture" id="CanvasTexture_nplo3"]
diffuse_texture = ExtResource("3_e3isr")
normal_texture = SubResource("CompressedTexture2D_dip6k")

[sub_resource type="Animation" id="Animation_e3isr"]
resource_name = "idle_front"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CanvasTexture_nplo3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 31]
}

[sub_resource type="Animation" id="Animation_0s5e8"]
resource_name = "walk_back"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 31]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_12egq")]
}

[sub_resource type="Animation" id="Animation_dip6k"]
resource_name = "walk_bottom_left"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.06667, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 32, 49]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_e3isr")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_7l1ah"]
resource_name = "walk_bottom_right"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.06667, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 32, 49]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_nbrll")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="CanvasTexture" id="CanvasTexture_70qsr"]
diffuse_texture = ExtResource("9_e7qq7")
normal_texture = ExtResource("7_e3isr")

[sub_resource type="Animation" id="Animation_x3b8j"]
resource_name = "walk_front"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CanvasTexture_70qsr")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_dk22a"]
resource_name = "walk_left"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.06667, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 32, 49]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_eftn4")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_6hcen"]
resource_name = "walk_right"
length = 1.06667
loop_mode = 1
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 2,
"values": [0, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_vjg0x")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_nplo3"]
resource_name = "walk_top_left"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.06667, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 32, 49]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_dip6k")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_orc17"]
resource_name = "walk_top_right"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.06667, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 32, 49]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_70qsr")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6hcen"]
_data = {
&"RESET": SubResource("Animation_gs10s"),
&"idle_back": SubResource("Animation_70qsr"),
&"idle_front": SubResource("Animation_e3isr"),
&"walk_back": SubResource("Animation_0s5e8"),
&"walk_bottom_left": SubResource("Animation_dip6k"),
&"walk_bottom_right": SubResource("Animation_7l1ah"),
&"walk_front": SubResource("Animation_x3b8j"),
&"walk_left": SubResource("Animation_dk22a"),
&"walk_right": SubResource("Animation_6hcen"),
&"walk_top_left": SubResource("Animation_nplo3"),
&"walk_top_right": SubResource("Animation_orc17")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x3b8j"]
animation = &"idle_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6hcen"]
animation = &"idle_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0s5e8"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jb5ke"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_6hcen"]
blend_point_0/node = SubResource("AnimationNodeAnimation_x3b8j")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_6hcen")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_0s5e8")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_jb5ke")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0ct7i"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a0fax"]
animation = &"walk_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t8eg7"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gs10s"]
animation = &"walk_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nplo3"]
animation = &"walk_top_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e3isr"]
animation = &"walk_bottom_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dip6k"]
animation = &"walk_bottom_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_70qsr"]
animation = &"walk_top_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_x3b8j"]
blend_point_0/node = SubResource("AnimationNodeAnimation_0ct7i")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_a0fax")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_t8eg7")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_gs10s")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_nplo3")
blend_point_4/pos = Vector2(-0.5, -0.5)
blend_point_5/node = SubResource("AnimationNodeAnimation_e3isr")
blend_point_5/pos = Vector2(-0.5, 0.5)
blend_point_6/node = SubResource("AnimationNodeAnimation_dip6k")
blend_point_6/pos = Vector2(0.5, 0.5)
blend_point_7/node = SubResource("AnimationNodeAnimation_70qsr")
blend_point_7/pos = Vector2(0.5, -0.5)
blend_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0s5e8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jb5ke"]
advance_mode = 2
advance_expression = "!velocity"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t8eg7"]
advance_mode = 2
advance_expression = "velocity"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_xm56e"]
state_machine_type = 1
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_6hcen")
states/Idle/position = Vector2(327, 142)
states/Start/position = Vector2(142, 120)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_x3b8j")
states/Walk/position = Vector2(278, 41)
transitions = ["Start", "Walk", SubResource("AnimationNodeStateMachineTransition_0s5e8"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_jb5ke"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_t8eg7")]
graph_offset = Vector2(-33, -22)

[sub_resource type="CircleShape2D" id="CircleShape2D_eftn4"]
radius = 73.0274

[sub_resource type="CircleShape2D" id="CircleShape2D_vjg0x"]
radius = 73.154

[sub_resource type="CircleShape2D" id="CircleShape2D_e7qq7"]
radius = 73.154

[sub_resource type="CircleShape2D" id="CircleShape2D_0e48y"]
radius = 47.3672

[sub_resource type="Gradient" id="Gradient_nbrll"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_orc17"]
gradient = SubResource("Gradient_nbrll")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 17
collision_mask = 17
motion_mode = 1
script = ExtResource("1_0e48y")
BASE_SPEED = 300.0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6hcen")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_xm56e")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = 1.0

[node name="interactablearea" type="Area2D" parent="."]
scale = Vector2(1.08, 1.08)
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactablearea"]
shape = SubResource("CircleShape2D_eftn4")
debug_color = Color(0.301266, 0.628117, 0, 0.42)

[node name="Hitbox" type="Area2D" parent="." groups=["player"]]
collision_mask = 2

[node name="HitBoxCollision" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2(1.08, 1.08)
shape = SubResource("CircleShape2D_vjg0x")
debug_color = Color(0, 0.6, 0.701961, 0.666667)

[node name="VisionHitbox" type="Area2D" parent="." groups=["player_light"]]
visible = false
collision_mask = 2

[node name="HitBoxCollision" type="CollisionShape2D" parent="VisionHitbox"]
scale = Vector2(1.08, 1.08)
shape = SubResource("CircleShape2D_e7qq7")
debug_color = Color(0.656215, 0.517062, 5.77569e-07, 0.666667)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-0.999985, -1)
scale = Vector2(1.08, 1.08)
shape = SubResource("CircleShape2D_0e48y")
debug_color = Color(0, 0.6, 0.701961, 0.666667)

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(-79, -104)
scale = Vector2(1.01, 1.01)
texture = SubResource("GradientTexture2D_orc17")
height = 106.0

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_e7qq7")
hframes = 32

[node name="Intended_dir" type="RayCast2D" parent="."]
scale = Vector2(4.28, 4.28)
target_position = Vector2(50, 0)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.111197, 0.111197, 0.111197, 1)

[connection signal="area_entered" from="interactablearea" to="." method="_on_interactablearea_area_entered"]
[connection signal="area_exited" from="interactablearea" to="." method="_on_interactablearea_area_exited"]
